@@ -1,3 +1,8 @@
+2007-11-22  Matthias Clasen  <mclasen@redhat.com>
+
+	* glib/gkeyfile.c: Set length out param in list-returning functions
+	to 0 when returning NULL.  (#498728, Christian Persch)
+
 2007-11-21 21:06:47  Tim Janik  <timj@imendio.com>
 
 	* Makefile.decl: initialize automake variables EXTRA_DIST and
